--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
 
 	<title>简单计算器</title>
+	<link rel="icon" href="./img/favicon.ico" sizes="64x64"/>
 	<script type = "text/javascript" src = "js/javascript.js"></script>
 	<link rel = "stylesheet" href = "css/style.css" type = "text/css"/>
 </head>
