--- a/html/HTML1.html
+++ b/html/HTML1.html
@@ -6,6 +6,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>HTML入门·一</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "https://hm.baidu.com/hm.js?b26c80c0a0b8cec970ab4dcc3cbc6a76";
+		  var s = document.getElementsByTagName("script")[0]; 
+		  s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
+		
 </head>
 
 <body>
