--- a/html/HTML1.html
+++ b/html/HTML1.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>HTML入门·一</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/180px-HTML5_logo_and_wordmark.svg.png" type="image/x-icon" sizes="180x180">
 	<script>
 		var _hmt = _hmt || [];
 		(function() {
