--- a/html/HTML1.html
+++ b/html/HTML1.html
@@ -6,17 +6,19 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>HTML入门·一</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/180px-HTML5_logo_and_wordmark.svg.png" type="image/x-icon" sizes="180x180">
+	<link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/180px-HTML5_logo_and_wordmark.svg.png"
+	 type="image/x-icon" sizes="180x180" />
+	<link rel="stylesheet" type="text/css" href="style.css"/>
 	<script>
 		var _hmt = _hmt || [];
-		(function() {
-		  var hm = document.createElement("script");
-		  hm.src = "https://hm.baidu.com/hm.js?b26c80c0a0b8cec970ab4dcc3cbc6a76";
-		  var s = document.getElementsByTagName("script")[0]; 
-		  s.parentNode.insertBefore(hm, s);
+		(function () {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?b26c80c0a0b8cec970ab4dcc3cbc6a76";
+			var s = document.getElementsByTagName("script")[0];
+			s.parentNode.insertBefore(hm, s);
 		})();
 	</script>
-		
+	<script type="text/javascript" src="index.js"></script>
 </head>
 
 <body>
@@ -212,6 +214,9 @@
 		<p style="font-size: inherit; color: inherit; line-height: inherit; padding: 0px; margin: 1.7em 0px;">超文本标记语言是标准通用标记语言下的一个应用，也是一种规范，一种标准，它通过标记符号来标记要显示的网页中的各个部分。网页文件本身是一种<strong
 			 style="font-size: inherit; line-height: inherit; margin: 0px; padding: 0px; font-weight: bold; color: rgb(233, 105, 0);">文本文件</strong>，通过在文本文件中添加<strong
 			 style="font-size: inherit; line-height: inherit; margin: 0px; padding: 0px; font-weight: bold; color: rgb(233, 105, 0);">标记符</strong>，可以告诉浏览器如何显示其中的内容（如：文字如何处理，画面如何安排，图片如何显示等）。</p>
+		<div class="support">
+			<button class="sup-btn" onclick="hou()">滋磁作者一个？</button>
+		</div>
 	</div>
 </body>
 
