--- a/html/TBroswer.html
+++ b/html/TBroswer.html
@@ -1,43 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>浏览器型号检测</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-    <script>
-            function getexp() {
-                var str;
-                var ua = navigator.userAgent;
-                var isEdge = new RegExp("Edge");
-                var isQQ = new RegExp("QQBrowser");
-                var isMQQ = new RegExp("MQQBrowser");
-                var isUC = new RegExp("UBrowser");
-                var isFireFox = new RegExp("Firefox");
-                var isIE = new RegExp("Trident");
-                var isCriOS = /CriOS/;
-                var includeChrome = /Chrome/;
-                var includeSafari = /Safari/;
-                if (isEdge.test(ua)) str = "浏览器是 Microsoft Edge";
-                else if (isCriOS.test(ua)) str = "浏览器是 Chrome 移动版（仅Apple）";
-                else if (isMQQ.test(ua)) str = "浏览器是 QQ 浏览器移动版";
-                else if (isQQ.test(ua)) str = "浏览器是 QQ 浏览器";
-                else if (isUC.test(ua)) str = "浏览器是 UC 浏览器";
-                else if (isFireFox.test(ua)) str ="浏览器是 Mozilla FireFox";
-                else if (isIE.test(ua)) str ="浏览器是 Microsoft IE 或 IE 内核浏览器";
-                else if (includeSafari.test(ua) && !includeChrome.test(ua)) str = "浏览器是 Apple Safari";
-                else if (includeSafari.test(ua) && includeChrome.test(ua)) str = "浏览器可能是 Google Chrome/Chromium及衍生浏览器";
-                document.getElementById("show").innerHTML = str;
-            }
-        </script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script type = "text/javascript" src = "Broswer.js"></script>
 </head>
+
 <body>
     <h1 style="text-align: center;color: #0099ff">浏览器型号检测</h1>
     <div class="support">
         <button id="btn1" class="sup-btn" onclick="getexp()">测试一下</button>
     </div>
-    <p id="show" class="showd">123</p>
-    
+    <p id="show" class="showd">结果</p>
+
 </body>
+
 </html>
