--- a/html/TBroswer.html
+++ b/html/TBroswer.html
@@ -10,12 +10,13 @@
     <script type = "text/javascript" src = "Broswer.js"></script>
 </head>
 
-<body>
-    <h1 style="text-align: center;color: #0099ff">浏览器型号检测</h1>
+<body style="background-color: #2F4056;">
+    <h1 style="text-align: center;color: #01AAED">浏览器型号检测</h1>
     <div class="support">
         <button id="btn1" class="sup-btn" onclick="getexp()">测试一下</button>
     </div>
     <p id="show" class="showd">结果</p>
+    <p id="show2" class="showd2">2019.2.4</p>
 
 </body>
 
