--- a/html/2048.html
+++ b/html/2048.html
@@ -8,6 +8,10 @@
     <title>2048</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+        body {
+            overflow: hidden;
+        }
+
         * {
             padding: 0;
             margin: 0;
