--- a/html/flyudk/index.html
+++ b/html/flyudk/index.html
@@ -6,10 +6,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Fly UDK</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css" />
+	<script>
+		var _hmt = _hmt || [];
+		(function () {
+			var hm = document.createElement("script");
+			hm.src = "https://hm.baidu.com/hm.js?a8cc8659e1aed776c09126aff55eae57";
+			var s = document.getElementsByTagName("script")[0];
+			s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
+
 </head>
 
 <body>
-	<embed src="audio/jinja.mp3" autostart="true" loop="true" hidden="true" ></embed>
+	<embed src="audio/jinja.mp3" autostart="true" loop="true" hidden="true"></embed>
 	<div id="wrapBg">
 		<!--游戏背景-->
 		<div id="headTitle">
