--- a/html/convert.html
+++ b/html/convert.html
@@ -20,6 +20,8 @@
                 $("#show1").text("原码");
                 $("#show2").text("反码");
                 $("#show3").text("补码");
+                num++;
+                if(num == 15) alert("恭喜你发现了FLAG" + Fla);
             });
         });
     </script>
