--- a/html/convert.html
+++ b/html/convert.html
@@ -14,6 +14,7 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $("#btn").click(main);
+            var num = 0;
             $("#cls").click(function () {
                 //document.getElementById("kw").value = "";
                 $("#kw").val("");
