--- a/html/convert.html
+++ b/html/convert.html
@@ -22,7 +22,7 @@
                 $("#show2").text("反码");
                 $("#show3").text("补码");
                 num++;
-                if(num == 15) alert("恭喜你发现了FLAG" + Fla);
+                if(num == 10) alert("恭喜你发现了FLAG = " + fla);
             });
         });
     </script>
