--- a/html/PowerShellTips3.html
+++ b/html/PowerShellTips3.html
@@ -3679,7 +3679,7 @@ $item为一个对象数组
             </tr>
         </tbody>
     </table>
-    <p data-line="1674"><code>math</code>类其他函数及详细用法参加微软文档: <a
+    <p data-line="1674"><code>math</code>类其他函数及详细用法参见微软文档: <a
             href="https://docs.microsoft.com/zh-cn/dotnet/api/system.math?view=netframework-4.7.2#%E6%96%B9%E6%B3%95">Math类</a>
     </p>
 </body>
