--- a/html/PowerShellTips3.html
+++ b/html/PowerShellTips3.html
@@ -1565,7 +1565,7 @@
     <p data-line="35">得知处理进程的命令有这些<br>
         然后再用<code>Get-Help Get-Process -full</code>就能得到<code>Get-Process</code>的详细用法以及使用范例</p>
     <h3 id="-6" data-line="38">基本语法</h3>
-    <p data-line="39">PowerShell是一个强类型和弱类型都有的(变量一旦定义，其本身类型不可改变就是强类型，反之就是弱类型)的动态脚本语言，支持面向对象，支持调用系统API和 .NET。<br>
+    <p data-line="39">PowerShell是一个强类型和弱类型都有(变量一旦定义，其本身类型不可改变就是强类型，反之就是弱类型)的动态脚本语言，支持面向对象，支持调用系统API和 .NET。<br>
         受到<code>Python</code>, <code>Ksh</code>, <code>Perl</code>, <code>C#</code>, <code>CL</code>, <code>DCL</code>,
         <code>SQL</code>, <code>Tcl</code>, <code>Tk</code>, <code>Chef</code>, <code>Puppet</code>等语言的影响，结合了以上语言的部分特性。
     </p>
