--- a/html/PowerShellTips3.html
+++ b/html/PowerShellTips3.html
@@ -6,11 +6,11 @@
     <style id="style">
         @font-face {
             font-family: 'Lato';
-            src: url('file:///C:/Users/aaaaa/AppData/Local/boost/app-0.11.15/resources/app/resources/fonts/Lato-Regular.woff2') format('woff2'),
+            src: url('fonts/Lato-Regular.woff2') format('woff2'),
                 /* Modern Browsers */
-                url('file:///C:/Users/aaaaa/AppData/Local/boost/app-0.11.15/resources/app/resources/fonts/Lato-Regular.woff') format('woff'),
+                url('fonts/Lato-Regular.woff') format('woff'),
                 /* Modern Browsers */
-                url('file:///C:/Users/aaaaa/AppData/Local/boost/app-0.11.15/resources/app/resources/fonts/Lato-Regular.ttf') format('truetype');
+                url('fonts/Lato-Regular.ttf') format('truetype');
             font-style: normal;
             font-weight: normal;
             text-rendering: optimizeLegibility;
@@ -18,11 +18,11 @@
 
         @font-face {
             font-family: 'Lato';
-            src: url('file:///C:/Users/aaaaa/AppData/Local/boost/app-0.11.15/resources/app/resources/fonts/Lato-Black.woff2') format('woff2'),
+            src: url('Lato-Black.woff2') format('woff2'),
                 /* Modern Browsers */
-                url('file:///C:/Users/aaaaa/AppData/Local/boost/app-0.11.15/resources/app/resources/fonts/Lato-Black.woff') format('woff'),
+                url('fonts/Lato-Black.woff') format('woff'),
                 /* Modern Browsers */
-                url('file:///C:/Users/aaaaa/AppData/Local/boost/app-0.11.15/resources/app/resources/fonts/Lato-Black.ttf') format('truetype');
+                url('fonts/Lato-Black.ttf') format('truetype');
             font-style: normal;
             font-weight: 700;
             text-rendering: optimizeLegibility;
@@ -34,9 +34,9 @@
             font-weight: 400;
             src: local('Material Icons'),
                 local('MaterialIcons-Regular'),
-                url('file:///C:/Users/aaaaa/AppData/Local/boost/app-0.11.15/resources/app/resources/fonts/MaterialIcons-Regular.woff2') format('woff2'),
-                url('file:///C:/Users/aaaaa/AppData/Local/boost/app-0.11.15/resources/app/resources/fonts/MaterialIcons-Regular.woff') format('woff'),
-                url('file:///C:/Users/aaaaa/AppData/Local/boost/app-0.11.15/resources/app/resources/fonts/MaterialIcons-Regular.ttf') format('truetype');
+                url('fonts/MaterialIcons-Regular.woff2') format('woff2'),
+                url('fonts/MaterialIcons-Regular.woff') format('woff'),
+                url('fonts/MaterialIcons-Regular.ttf') format('truetype');
         }
 
         html,
