--- a/html/PowerShellTips3.html
+++ b/html/PowerShellTips3.html
@@ -18,7 +18,7 @@
 
         @font-face {
             font-family: 'Lato';
-            src: url('Lato-Black.woff2') format('woff2'),
+            src: url('fonts/Lato-Black.woff2') format('woff2'),
                 /* Modern Browsers */
                 url('fonts/Lato-Black.woff') format('woff'),
                 /* Modern Browsers */
