--- a/html/Birthday/cake.html
+++ b/html/Birthday/cake.html
@@ -22,15 +22,16 @@
         </div>
         <div style="width: 195px;margin: 0 auto;">
             <img src='img/srkl.gif'>
-            
+
+        </div>
+        <div class="happy" style="text-align: center;">
+
+            <img src="img/HappyBirthday2.png">
+            <!--<span style="font-family:Verdana, Geneva, Tahoma, sans-serif;font-size: 35px;position: relative;top: 30px;">生日快乐</span>-->
         </div>
 
     </div>
-    <div class="happy">
-        
-        <img src="img/HappyBirthday2.png">
-        <!--<span style="font-family:Verdana, Geneva, Tahoma, sans-serif;font-size: 25px;margin-top: 10px;">Happy Birthday</span>-->
-    </div>
+
     <!--
     <div class="button-style1">
         <a href="Memories.html" class="lk1">
