--- a/html/2048neo.html
+++ b/html/2048neo.html
@@ -26,15 +26,20 @@
         }
 
         #game-window {
-            width: 100%;
+            width: 85vmin;
+            height: 85vmin;
             margin: auto;
             font-weight: 700;
             position: relative;
         }
+        
+        div.option {
+            font-size: 2vmin;
+        }
 
         #game-window .option .button {
             position: relative;
-            font-size: 15px;
+            font-size: 2vmin;
             background-color: #9f8b77;
             border: 1px solid #9f8b77;
             color: white;
@@ -51,7 +56,7 @@
 
         #game-window .game-panel {
             width: 100%;
-            height: 100vw;
+            height: 85vmin;
             background-color: #bbada0;
             border-radius: 6px;
             margin-top: 6px;
@@ -62,7 +67,7 @@
         #game-window .game-panel .cell {
             position: absolute;
             width: 20%;
-            height: 20vw;
+            height: 20%;
             background-color: #ccc0b3;
             border-radius: 6px;
             transition: 200ms;
@@ -72,9 +77,9 @@
         #game-window .game-panel .cell {
             background-color: #ffcb38;
             opacity: .8;
-            font-size: 32px;
+            font-size: 7vmin;
             font-weight: bold;
-            line-height: 80px;
+            line-height: 2.5;
             text-align: center;
             color: #776e65;
         }
