--- a/html/2048neo.html
+++ b/html/2048neo.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>2048</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>
+        var _hmt = _hmt || [];
+        (function () {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?561de8ed0edac03056b0d26e37c0b8b2";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
     <style>
         body {
             overflow: hidden;
@@ -22,7 +32,7 @@
             font-weight: bolder;
             font-size: 40px;
             margin: 6px;
-            color:#9f8b77;
+            color: #9f8b77;
         }
 
         #game-window {
@@ -32,7 +42,7 @@
             font-weight: 700;
             position: relative;
         }
-        
+
         div.option {
             font-size: 2vmin;
         }
