--- a/indexold.html
+++ b/indexold.html
@@ -10,14 +10,14 @@
 
 	<title>简单计算器</title>
 	<link rel="icon" href="./img/favicon.ico" sizes="64x64" />
-	<script type="text/javascript" src="js/ts-js.js"></script>
+	<script type="text/javascript" src="js/javascript.js"></script>
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 
 <body>
 	<h1 class="cal">计算器</h1>
 	<div class="vers">
-		<span class="version">版本 V2.0</span>
+		<span class="version">版本 V1.2</span>
 	</div>
 
 	<!--<div style="text-align: center;">
@@ -47,14 +47,12 @@
 		<button class="butt" onclick="pre0()">0</button>
 		<button class="butt" onclick="preD()">E</button>
 		<button class="butty" onclick="preDiv()">÷</button><br>
-		<button class="buttg" onclick="preAC()">C</button>
-		<button class="butty" onclick="preleft()">(</button>
-		<button class="butty" onclick="preright()">)</button>
+		<button class="buttg" onclick="preAC()">AC</button>
 		<button class="buttb" onclick="preRes()">=</button>
 	</div>
 
 	<div>
-		<a href="mailto:ab2defg145@gmail.com?subject=反馈&amp;body=我在使用网站时，遇到了以下问题：" title="点击给作者发送Feedback">2019 &copy; LNP</a>
+		<a href="mailto:ab2defg145@gmail.com?subject=反馈&amp;body=我在使用网站时，遇到了以下问题：" title="点击给作者发送Feedback">2019 &copy; 封掣</a>
 	</div>
 
 </body>
