--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<title>简单计算器</title>
 	<link rel="icon" href="./img/favicon.ico" sizes="64x64" />
-	<script type="text/javascript" src="js/ts-js.js"></script>
+	<script type="text/javascript" src="js/calculator.js"></script>
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 
