--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<meta charset="utf-8">
 
 	<!--适配移动设备-->
-	<meta content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-		name="viewport" />
+	<meta content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
 
 	<title>简单计算器</title>
 	<link rel="icon" href="./img/favicon.ico" sizes="64x64" />
 	<script type="text/javascript" src="js/calculator.js"></script>
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
+		
 </head>
 
 <body>
