--- a/html/convert.html
+++ b/html/convert.html
@@ -21,7 +21,7 @@
                 $("#show2").text("反码");
                 $("#show3").text("补码");
                 num++;
-                if(num == 10) alert("恭喜你发现了FLAG = " + fla);
+                if (num == 10) alert("恭喜你发现了FLAG = " + fla);
             });
         });
     </script>
@@ -36,8 +36,8 @@
             <span class="mdui-typo-headline mdui-hidden-xs">Crepe</span>
             <div class="mdui-toolbar-spacer"></div>
             <span class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white"
-                mdui-dialog="{target: '#dialog-docs-theme'}" mdui-tooltip="{content: '设置主题'}" style="display: none;"><i
-                    class="mdui-icon material-icons">color_lens</i></span>
+                mdui-dialog="{target: '#dialog-docs-theme'}" mdui-tooltip="{content: '设置主题'}">
+                <i class="mdui-icon material-icons">color_lens</i></span>
             <a href="https://github.com/lollipopnougat/website-calculator/blob/master/html/convert.html" target="_blank"
                 class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white" mdui-tooltip="{content: '查看 Github'}">
                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -353,9 +353,9 @@
         <div class="mdui-divider"></div>
         <h3 class="doc-title  mdui-text-color-theme">结果</h3>
         <ul class="mdui-list">
-            <li class="mdui-list-item mdui-ripple mdui-text-color-theme-accent" id="show1">原码</li>
-            <li class="mdui-list-item mdui-ripple mdui-text-color-theme-accent" id="show2">反码</li>
-            <li class="mdui-list-item mdui-ripple mdui-text-color-theme-accent" id="show3">补码</li>
+            <li class="mdui-list-item mdui-ripple mdui-text-color-theme-accent" id="show1" onclick="copy(1)">原码</li>
+            <li class="mdui-list-item mdui-ripple mdui-text-color-theme-accent" id="show2" onclick="copy(2)">反码</li>
+            <li class="mdui-list-item mdui-ripple mdui-text-color-theme-accent" id="show3" onclick="copy(3)">补码</li>
         </ul>
     </div>
 </body>
