--- a/html/BAConvert.html
+++ b/html/BAConvert.html
@@ -167,7 +167,7 @@
         <h2>B站BVAV地址转换</h2>
     </header>
     <div class="content">
-        <textarea id="decoded-area" placeholder="BV"></textarea>
+        <textarea id="decoded-area" placeholder="开头需要带有大写“BV”"></textarea>
         <div class="buttons">
 
             <button id='encode-btn' class="btn">BV 转 AV &gt;&gt;</button>
@@ -175,7 +175,7 @@
             <button id='decode-btn' class="btn">&lt;&lt; AV 转 BV</button>
 
         </div>
-        <textarea id="encoded-area" placeholder="AV"></textarea>
+        <textarea id="encoded-area" placeholder="只需要AV号数字部分即可"></textarea>
     </div>
     <div class="content">
         <button class="btn" id="copy-decode">复制BV结果</button>
