--- a/html/BAConvert.html
+++ b/html/BAConvert.html
@@ -150,6 +150,9 @@
             background-color: #886600;
             box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 0px 1px;
         }
+        a {
+            transition: all 0.5s ease-out 0s;
+        }
 
         a:visited {
             color: #0089ff;
