--- a/html/Nobility.html
+++ b/html/Nobility.html
@@ -2,13 +2,18 @@
 
 <html>
 
- <head>
- <meta name="viewport" content="width=device-width,maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
- <meta charset="utf-8">
+<head>
+    <meta name="viewport" content="width=device-width,maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
 
- <title>那是真的牛批</title>
- </head>
- <body>
-  <h1 style="color:#ff8000;text-align:center;">那是真的牛批</h1>
-  </body>
- </html>
+    <title>那是真的牛批</title>
+</head>
+
+<body>
+    <h1 style="color:#ff8000;text-align:center;" id="nb">那是真的牛批</h1>
+    <script>
+        let res = confirm("就问你牛不牛批");
+    </script>
+</body>
+
+</html>
