更新奇怪的东西

--- a/html/Tic-Tac-Toe.html
+++ b/html/Tic-Tac-Toe.html
@@ -47,39 +47,41 @@
                 <tr>
                     <td>
                         <button class="lt-block" id="no1">
-    </div>
-    </td>
-    <td>
-        <button class="lt-block" id="no2"></div>
-    </td>
-    <td>
-        <button class="lt-block" id="no3"></div>
-    </td>
-    </tr>
-    <tr>
-        <td>
-            <button class="lt-block" id="no4"></div>
-        </td>
-        <td>
-            <button class="lt-block" id="no5"></div>
-        </td>
-        <td>
-            <button class="lt-block" id="no6"></div>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <button class="lt-block" id="no7"></div>
-        </td>
-        <td>
-            <button class="lt-block" id="no8"></div>
-        </td>
-        <td>
-            <button class="lt-block" id="no9"></div>
-        </td>
-    </tr>
-    </tbody>
-    </table>
+                        </button>
+                    </td>
+                    <td>
+                        <button class="lt-block" id="no2"></button>
+                    </td>
+                    <td>
+                        <button class="lt-block" id="no3"></button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button class="lt-block" id="no4"></button>
+                    </td>
+                    <td>
+                        <button class="lt-block" id="no5"></button>
+                    </td>
+                    <td>
+                        <button class="lt-block" id="no6"></button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <button class="lt-block" id="no7">
+                        </button>
+                    </td>
+                    <td>
+                        <button class="lt-block" id="no8">
+                        </button>
+                    </td>
+                    <td>
+                        <button class="lt-block" id="no9"></button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
     <script>
         var array = [
@@ -107,8 +109,7 @@
             if (is_over(1)) {
                 alert("玩家1赢了！");
                 return;
-            }
-            else if (is_over(2)) {
+            } else if (is_over(2)) {
                 alert("玩家2赢了！");
                 return;
             }
